# Verim-Backend

./: .gitignore  README.md  communicator.py  docker-compose.yml
.github/workflows/: python-app.yml
api-gateway/: Dockerfile  main.py  pyproject.toml
auth/: Dockerfile  main.py  main_grpc.py  pyproject.toml
auth/config/: __init__.py  app.py  celery.py  celery_config.py  db.py  grpc.py  i18n.py  mail.py  settings.py  tasks.py
auth/config/di/: dev.py
auth/endpoints/: __init__.py  jwt.py  login.py  password.py  registration.py
auth/grpc_services/: __init__.py  auth.py
auth/junit/: auth-test-results.xml
auth/locale/ru/LC_MESSAGES/: base.po
auth/migrations/: env.py
auth/migrations/versions/: 18c7f0ebcf80_nullable_password.py  1c1bbe5e0a97_create_code_table.py  468e02e8c8e1_add_type_column_to_code.py  4b05e3dedb27_add_ondelete_cascade_to_code_for_user_fk.py  788c2e702bd1_add_user_tokens_revoked_at.py  a7795d1f2170_updated_at_default_value.py  c127415495e0_create_code_table_rename_user_table.py  dc907e074359_add_email_confirmed_column_to_user.py
auth/models/: codes.py  users.py
auth/repo/: code.py  user.py
auth/schemas/: __init__.py  login.py  password.py  register.py  token.py
auth/services/: authenticate.py  entries.py  login.py  password.py  registration.py  repo.py
auth/services/codes/: __init__.py  check.py  create.py  repo.py  send.py
auth/services/jwt/: __init__.py  create.py  refresh.py  revoke.py
auth/services/password/: __init__.py  change.py  reset.py
auth/services/regisration/: __init__.py  create.py
auth/services/registration/: __init__.py  check.py  confirm.py  create.py  repeat.py
auth/services/validators/: __init__.py  base.py  password.py  username.py
auth/tests/schemas/: test_login.py  test_password.py
auth/tests/services/: test_authenticate.py  test_authenticate_by_token.py  test_jwt_refresh.py  test_registration_create.py
auth/utils/: app.py  decorators.py  exceptions.py  middleware.py  random.py  repo.py  routing.py  time.py  typing.py
configs/postgres/: pg-init-database.sh
gateway/: Dockerfile  auth_grpc_typed.py  pyproject.toml
gateway/config/: __init__.py  app.py  celery.py  db.py  grpc.py  mail.py  settings.py
gateway/endpoints/: __init__.py
gateway/schemas/: __init__.py
gateway/utils/: decorators.py  middleware.py  test.py
mounts/config/: db.py  grpc.py  i18n.py  mail.py
mounts/utils/: app.py  decorators.py  exceptions.py  (+3 more)
protobufs/: auth.proto  publisher.proto
publisher/: Dockerfile  main.py  pyproject.toml  requirements.txt
(+44 files in other folders)
