[tool.poetry]
name = "Verim"
version = "0.1.0"
description = "Verim Project"
authors = ["Matvey Ivanov"]

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "0.103.1"
uvicorn = "0.23.2"
psycopg2-binary = "2.9.7"
SQLAlchemy = "2.0.20"
redis = "5.0.0"
PyJWT = "2.8.0"
amqp = "5.1.1"
PyAMQP = "0.1.0.7"
celery = "5.3.1"
dependency-injector = "4.41.0"
pydantic = "2.3.0"
alembic = "1.12.0"
pytz = "2023.3.post1"
fastapi-versioning = "0.10.0"
email-validator = "2.0.0.post2"
bcrypt = "4.0.1"
fastapi-mail = "1.4.1"
asgiref = "3.7.2"
pytest = "7.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
